--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,4 +1,25 @@
-<ActionBar title="NativesApp"></ActionBar>
+<ActionBar title="NativesApp" class="action-bar">
+    <Label
+        android.text="NativesApp" 
+        ios.text="NativesApp" 
+        class="action-bar-title"
+        horizontalAlignment="left">
+    </Label>
+
+    <ActionItem
+        text="Edit" 
+        android.position="actionBar"
+        android.position="popup"
+        android:position="actionBarIfRoom" />
+    </ActionItem>
+
+    <ActionItem
+        text="Edit" 
+        ios.position="left"
+        ios.position="right"/>
+    </ActionItem>
+
+</ActionBar>
 
 <StackLayout>
 </StackLayout>
